2006-05-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Better non-TXN support.
	* src/UndoHistory.py (__init__): Rename list to tree.

	* src/DataViews/_PersonView.py (delete_person_response): Use child_ref.
	* src/plugins/Leak.py: Typo.
	* src/plugins/Eval.py: Convert to ManagedWindow.
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Add callname to
	names during upgrade.
	* src/GrampsDb/_ReadXML.py (start_childref): Typo.
	* src/GrampsDb/_GrampsInMemDB.py (load): Define self.full_name
	prior to calling open_undodb().
	(GrampsInMemDB._del_*): Proper deletes.

2006-05-07  Don Allingham  <don@gramps-project.org>
	* configure.in: set for 2.1.1
	* src/GrampsDb/_ReadXML.py: call name support
	* src/GrampsDb/_WriteXML.py: call name support
	* src/DisplayState.py: include name and relationship on statusbar
	* src/DataViews/_MediaView.py: tool tips
	* src/DataViews/_RepositoryView.py: tool tips
	* src/DataViews/_SourceView.py: tool tips
	* src/DataViews/_EventView.py: tool tips
	* src/DataViews/_PedigreeView.py: tool tips
	* src/DataViews/_PlaceView.py: tool tips
	* src/DataViews/_PersonView.py: tool tips
	* src/ViewManager.py: tool tips
	* src/QuestionDialog.py: add info dialog
	* src/PageView.py: tool tips
	* src/DataViews/_PersonView.py: rebuild tree on surname change,
	don't attempt to delete/insert, since this can cause things to
	hang.

2006-05-06  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (load): Use common undodb
	methods; reset undo history.
	* src/GrampsDb/_GrampsInMemDB.py (load): Use common undodb
	methods; reset undo history.
	* src/GrampsDb/_GrampsXMLDB.py: Minor fix.
	* src/GrampsDb/_GrampsGEDDB.py: Minor fix.
	* src/GrampsDb/_GrampsDbBase.py: Undo history support.
	* src/UndoHistory.py: Fixes and additions.
	* src/ViewManager.py (post_load): Re-set undo/redo labels.

2006-05-06  Don Allingham  <don@gramps-project.org>
	* src/PluginUtils/_ReportUtils.py: fix set_nick_name